Minor changes, new scripts added

--- a/html/about.html
+++ b/html/about.html
@@ -7,12 +7,26 @@
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/images/favicon/apple-touch-icon.png"
     />
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/assets/images/favicon/site.webmanifest">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/images/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/assets/images/favicon/site.webmanifest" />
   </head>
   <body>
     <header>
@@ -21,12 +35,11 @@
           <a href="../index.html" aria-label="Home">
             <img
               src="/assets/images/logo.webp"
-              alt="Logo with no Image"
+              alt="Logo"
               class="logo"
-            >
+            />
           </a>
         </div>
-
 
         <button
           class="menutoggle"
@@ -45,9 +58,7 @@
             <a href="/html/about.html" aria-label="About">About</a>
           </li>
           <li tabindex="0">
-            <a href="/html/works.html" aria-label="Works"
-              >Works</a
-            >
+            <a href="/html/works.html" aria-label="Works">Works</a>
           </li>
           <li tabindex="0">
             <a href="/html/contact.html" aria-label="Contact">Contact</a>
@@ -58,17 +69,16 @@
         </ul>
       </nav>
       <div class="progress-bar"></div>
-
     </header>
 
     <div class="main-content about">
       <section class="one about">
-        <h1>I am a Frontend Web Developer</h1>
+        <h1>I'm a Frontend Web Developer</h1>
         <p>with a passion for creating beautiful and interactive websites.</p>
       </section>
 
       <section class="two about image">
-        <img src="/assets/images/about/stencil.webp" alt="Me"/>
+        <img src="/assets/images/about/stencil.webp" alt="Me" />
       </section>
 
       <section class="three">
@@ -86,18 +96,36 @@
           and Information Technology, where I acquired a solid foundation in
           various aspects of computing and technology. My studies enabled me to
           explore cutting-edge technologies and delve into the world of web
-          development.
+          development. Furthermore, I bring to the table a performance-driven
+          and reliable background as an IT professional, with over 16 years of
+          accomplishments spanning both the IT and fintech industries. My
+          technical proficiency is complemented by adept diagnostic and
+          analytical capabilities, allowing me to effectively address challenges
+          as they arise. As an experienced problem solver, I excel in swiftly
+          and accurately resolving technical issues, guaranteeing the continuity
+          of services and seamless business operations.
         </p>
 
         <h3>Technologies and Languages</h3>
         <p>
-          As a web developer, I thrive on staying up-to-date with the latest
-          advancements in the industry. I have hands-on experience with a range
-          of technologies, including Node.js and React, which have become
-          instrumental in building dynamic and interactive web applications. My
-          proficiency in programming languages like Python, JavaScript, HTML/CSS
-          allows me to craft seamless user experiences and design visually
-          appealing websites.
+          As a web developer, I am dedicated to continuously enhancing my skills
+          to align with the latest advancements in the industry. Currently I am
+          completing a frontend web developer traineeship, to staying updated
+          with the cutting-edge technologies. I have hands-on experience with a
+          diverse range of technologies, including HTML, CSS, JavaScript, React
+          and Node.js. These technologies have proven instrumental in enabling
+          me to create dynamic and interactive web applications and also to
+          design visually captivating websites that leave a lasting impression.
+          During my academic experience I have become familiar with a range of
+          programming languages such as Python, Java, C and I have also gained
+          exposure to important technologies like object-oriented programming,
+          database systems, computer networking, software engineering, security,
+          data analytics, information systems management, cloud computing and
+          more.
+        </p>
+
+        <p>
+          <a href="/my-resume.pdf" target="_blank">My Resume (pdf 116kb)</a>
         </p>
       </section>
     </div>
@@ -107,7 +135,5 @@
     <script src="/assets/js/fade.js"></script>
     <script src="/assets/js/current-page.js"></script>
     <script src="/assets/js/progress-bar.js"></script>
-
-
   </body>
 </html>
