--- a/html/works.html
+++ b/html/works.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <link
     rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
   />
 
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
@@ -22,7 +22,7 @@
           <a href="../index.html" aria-label="Home">
             <img
               src="/assets/images/logo.webp"
-              alt="Logo with no Image"
+              alt="Logo"
               class="logo"
             >
           </a>
