New pages added

--- a/html/works/butterfly.html
+++ b/html/works/butterfly.html
@@ -102,7 +102,7 @@
         </p>
 
         <p>By creating an online platform, the crèche aspires to:</p>
-        <ul>
+        <ul class="butterfly-ul">
           <li>
             <span>Inform Parents</span>: Provide detailed information about
             services, facilities, and educational methods.
