New images for article-two, new page added, css changes

--- a/index.html
+++ b/index.html
@@ -6,26 +6,39 @@
     <title>Homepage</title>
     <link rel="stylesheet" href="/assets/css/styles.css" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/assets/images/favicon/site.webmanifest">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/images/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/images/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/assets/images/favicon/site.webmanifest" />
   </head>
   <body id="home">
     <div class="main-content">
       <div class="navigation">
         <ul>
-          <li class="nav-item one home" onmouseover="changeColor(this)" onmouseout="restoreColor(this)">
+          <li
+            class="nav-item one home"
+            onmouseover="changeColor(this)"
+            onmouseout="restoreColor(this)"
+          >
             Hello<span class="comma">,</span>
           </li>
-          <li class="nav-item two home">
-            I am
-          </li>
-          <li class="nav-item three home">
-            Simone
-          </li>
-          <li class="nav-item four home">
-          </li>
+          <li class="nav-item two home">I am</li>
+          <li class="nav-item three home">Simone</li>
+          <li class="nav-item four home"></li>
         </ul>
       </div>
     </div>
@@ -37,6 +50,5 @@
     <script src="/assets/js/navigation.js"></script>
     <script src="/assets/js/random.js"></script>
     <script src="/assets/js/change-color.js"></script>
-
   </body>
 </html>
