meta desc added

--- a/html/404.html
+++ b/html/404.html
@@ -3,27 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>404</title>
+    <meta
+      name="description"
+      content="Oops! It looks like the page you were looking for is not available. We apologize for the inconvenience."
+    />
+    <title>Simone Susino | Web Developer | 404 Error</title>
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-      />
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/assets/images/favicon/site.webmanifest">
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/images/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/images/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/assets/images/favicon/site.webmanifest" />
   </head>
   <body>
     <header>
       <nav>
         <div class="logo-container">
           <a href="../index.html" aria-label="Home">
-            <img
-              src="/assets/images/logo.webp"
-              alt="Logo"
-              class="logo"
-            />
+            <img src="/assets/images/logo.webp" alt="Logo" class="logo" />
           </a>
         </div>
 
@@ -44,7 +58,7 @@
             <a href="/html/about.html" aria-label="About">About</a>
           </li>
           <li tabindex="0">
-            <a href="/html/works.html" aria-label="Works">Works</a>
+            <a href="/html/projects.html" aria-label="Projects">Projects</a>
           </li>
           <li tabindex="0">
             <a href="/html/contact.html" aria-label="Contact">Contact</a>
@@ -55,7 +69,6 @@
         </ul>
       </nav>
       <div class="progress-bar"></div>
-
     </header>
 
     <div class="main-content">
@@ -65,7 +78,9 @@
           The page you're looking for seems to have vanished into the digital
           abyss.
         </p>
-        <p>How about heading back to my <a href="../index.html">homepage</a>?</p>
+        <p>
+          How about heading back to my <a href="../index.html">homepage</a>?
+        </p>
       </section>
     </div>
 
