--- a/html/about.html
+++ b/html/about.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About</title>
+    <meta
+      name="description"
+      content="Learn more about me. I am a passionate frontend web developer with a background in Information Systems and Information Technology. Explore my skills, projects, and experiences."
+    />
+    <title>Simone Susino | Web Developer | About</title>
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-      />
+    />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -33,11 +37,7 @@
       <nav>
         <div class="logo-container">
           <a href="../index.html" aria-label="Home">
-            <img
-              src="/assets/images/logo.webp"
-              alt="Logo"
-              class="logo"
-            />
+            <img src="/assets/images/logo.webp" alt="Logo" class="logo" />
           </a>
         </div>
 
@@ -58,7 +58,7 @@
             <a href="/html/about.html" aria-label="About">About</a>
           </li>
           <li tabindex="0">
-            <a href="/html/works.html" aria-label="Works">Works</a>
+            <a href="/html/projects.html" aria-label="Projects">Projects</a>
           </li>
           <li tabindex="0">
             <a href="/html/contact.html" aria-label="Contact">Contact</a>
