--- a/html/contact.html
+++ b/html/contact.html
@@ -3,17 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
+    <meta
+      name="description"
+      content="Connect with me on various platforms such as GitHub, Telegram, Twitter, and LinkedIn. Feel free to send me a message or get in touch. Thanks for visiting my website!"
+    />
+    <title>Simone Susino | Web Developer | Contact</title>
 
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-    >
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/assets/images/favicon/site.webmanifest">
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/images/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/images/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/assets/images/favicon/site.webmanifest" />
   </head>
   <body>
     <header>
@@ -24,10 +42,9 @@
               src="/assets/images/logo.webp"
               alt="Logo with no Image"
               class="logo"
-            >
+            />
           </a>
         </div>
-
 
         <button
           class="menutoggle"
@@ -46,9 +63,7 @@
             <a href="/html/about.html" aria-label="About">About</a>
           </li>
           <li tabindex="0">
-            <a href="/html/works.html" aria-label="Works"
-              >Works</a
-            >
+            <a href="/html/projects.html" aria-label="Projects">Projects</a>
           </li>
           <li tabindex="0">
             <a href="/html/contact.html" aria-label="Contact">Contact</a>
@@ -59,49 +74,48 @@
         </ul>
       </nav>
       <div class="progress-bar"></div>
-
     </header>
 
     <div class="main-content contact">
       <section class="one contact">
         <h1>Find me on:</h1>
         <div class="socials">
-            <a
-              href="https://github.com/simworld"
-              target="_blank"
-              aria-label="Github"
-              tabindex="0"
-              ><i class="fa-brands fa-github fa-3x"></i
-            ></a>
-            <a
+          <a
+            href="https://github.com/simworld"
+            target="_blank"
+            aria-label="Github"
+            tabindex="0"
+            ><i class="fa-brands fa-github fa-3x"></i
+          ></a>
+          <a
             href="https://twitter.com/mastrusimuni"
             target="_blank"
             aria-label="Twitter"
             tabindex="0"
             ><i class="fa-brands fa-square-x-twitter fa-3x"></i
-            ></a>
-            <!-- <a
+          ></a>
+          <!-- <a
               href=""
               target="_blank"
               aria-label="Whatsapp"
               tabindex="0"
             ><i class="fa-brands fa-whatsapp fa-3x"></i
             ></a> -->
-            <a
-              href="https://t.me/dyl4nd0g"
-              target="_blank"
-              aria-label="Telegram"
-              tabindex="0"
-              ><i class="fa-brands fa-telegram fa-3x"></i
-            ></a>
-            <a
-              href="https://ie.linkedin.com/in/simonesusino"
-              target="_blank"
-              aria-label="Linkedin"
-              tabindex="0"
-              ><i class="fa-brands fa-linkedin fa-3x"></i>
-            </a>
-          </div>
+          <a
+            href="https://t.me/dyl4nd0g"
+            target="_blank"
+            aria-label="Telegram"
+            tabindex="0"
+            ><i class="fa-brands fa-telegram fa-3x"></i
+          ></a>
+          <a
+            href="https://ie.linkedin.com/in/simonesusino"
+            target="_blank"
+            aria-label="Linkedin"
+            tabindex="0"
+            ><i class="fa-brands fa-linkedin fa-3x"></i>
+          </a>
+        </div>
         <!-- <p>with a passion for creating beautiful and interactive websites.</p> -->
       </section>
 
@@ -110,9 +124,7 @@
         <p>Feel free to send me a message!</p>
         <!-- <img src="/assets/images/background.webp" alt="Me"/>
         <img src="/assets/images/mountain.webp" alt="Me"/> -->
-
       </section>
-
 
       <section class="three contact">
         <!-- <h2>Send me a message!</h2> -->
@@ -129,17 +141,19 @@
                 id="name"
                 name="firstname"
                 placeholder="Your name.."
-              >
+              />
 
-              <label for="email"><i class="fa-solid fa-envelope"></i> Email</label>
-              <input
-              type="email"
-              id="email"
-              name="email"
-              placeholder="Your email.."
-              pattern="^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"
-              required
+              <label for="email"
+                ><i class="fa-solid fa-envelope"></i> Email</label
               >
+              <input
+                type="email"
+                id="email"
+                name="email"
+                placeholder="Your email.."
+                pattern="^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"
+                required
+              />
 
               <label for="phone"><i class="fa-solid fa-phone"></i> Phone</label>
               <input
@@ -147,9 +161,11 @@
                 id="phone"
                 name="phone"
                 placeholder="Your Phone.."
-              >
+              />
 
-              <label for="message"><i class="fa-solid fa-message"></i> Your Message</label>
+              <label for="message"
+                ><i class="fa-solid fa-message"></i> Your Message</label
+              >
               <textarea
                 id="message"
                 name="message"
@@ -161,7 +177,8 @@
                 class="submit-btn"
                 type="submit"
                 aria-label="Send a Message"
-              ><i class="fa-solid fa-paper-plane"></i>
+              >
+                <i class="fa-solid fa-paper-plane"></i>
                 Send
               </button>
             </form>
@@ -174,7 +191,5 @@
     <script src="/assets/js/hamburger.js"></script>
     <script src="/assets/js/current-page.js"></script>
     <script src="/assets/js/progress-bar.js"></script>
-
-
   </body>
 </html>
