--- a/html/projects/butterfly.html
+++ b/html/projects/butterfly.html
@@ -3,28 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Butterfly Childcare</title>
+    <meta
+      name="description"
+      content="Explore The Butterfly Childcare - A modern website for a Childcare business. Learn about the facility, its services, and educational philosophy. Empowering parents to make informed decisions for their child's care and education."
+    />
+    <title>Simone Susino | Web Developer | The Butterfly</title>
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-      />
+    />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/assets/images/favicon/site.webmanifest">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/images/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/images/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/assets/images/favicon/site.webmanifest" />
   </head>
   <body>
     <header>
       <nav>
         <div class="logo-container">
           <a href="../../index.html" aria-label="Home">
-            <img
-              src="/assets/images/logo.webp"
-              alt="Logo"
-              class="logo"
-            />
+            <img src="/assets/images/logo.webp" alt="Logo" class="logo" />
           </a>
         </div>
 
@@ -45,7 +59,7 @@
             <a href="/html/about.html" aria-label="About">About</a>
           </li>
           <li tabindex="0">
-            <a href="/html/works.html" aria-label="Works">Works</a>
+            <a href="/html/projects.html" aria-label="Projects">Projects</a>
           </li>
           <li tabindex="0">
             <a href="/html/contact.html" aria-label="Contact">Contact</a>
@@ -58,13 +72,13 @@
       <div class="progress-bar"></div>
     </header>
 
-    <div class="main-content works-content">
-      <section class="one works-content">
+    <div class="main-content projects-content">
+      <section class="one projects-content">
         <h1>The Butterfly Childcare</h1>
         <p>A modern website for a Childcare business</p>
       </section>
 
-      <section class="two works-content image">
+      <section class="two projects-content image">
         <img
           src="/assets/images/butterfly/butterfly-overview-devices-logo.webp"
           alt="The Butterfly - Crèche & Childcare"
