--- a/html/projects/dimos.html
+++ b/html/projects/dimos.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DiMOS</title>
+    <meta
+      name="description"
+      content="Explore DiMOS, a Digital Menu Ordering. Learn how DiMOS revolutionizes order management in restaurants with real-time updates, user-friendly interfaces, and data insights."
+    />
+    <title>Simone Susino | Web Developer | DiMOS</title>
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <link
       rel="stylesheet"
@@ -55,7 +59,7 @@
             <a href="/html/about.html" aria-label="About">About</a>
           </li>
           <li tabindex="0">
-            <a href="/html/works.html" aria-label="Works">Works</a>
+            <a href="/html/projects.html" aria-label="Projects">Projects</a>
           </li>
           <li tabindex="0">
             <a href="/html/contact.html" aria-label="Contact">Contact</a>
@@ -68,14 +72,14 @@
       <div class="progress-bar"></div>
     </header>
 
-    <div class="main-content works-content">
-      <section class="one works-content">
+    <div class="main-content projects-content">
+      <section class="one projects-content">
         <h1>DiMOS</h1>
         <p>A Digital Menu Ordering System</p>
         <!-- <img src="/assets/images/dimos/dimos-iphone.png" alt="DiMOS" /> -->
       </section>
 
-      <section class="two works-content image">
+      <section class="two projects-content image">
         <img
           src="/assets/images/dimos/dimos-overview-devices-logo.webp"
           alt="DiMOS"
