--- a/html/blog.html
+++ b/html/blog.html
@@ -3,30 +3,43 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog</title>
+    <meta
+      name="description"
+      content="Explore insightful articles on my blog covering topics in web development, design, and technology. Stay updated with the latest trends and insights in the digital world."
+    />
+    <title>Simone Susino | Web Developer | Blog</title>
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-  />
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png">
-  <link rel="manifest" href="/assets/images/favicon/site.webmanifest">
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/images/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/images/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/assets/images/favicon/site.webmanifest" />
   </head>
   <body>
     <header>
       <nav>
         <div class="logo-container">
           <a href="../index.html" aria-label="Home">
-            <img
-              src="/assets/images/logo.webp"
-              alt="Logo"
-              class="logo"
-            >
+            <img src="/assets/images/logo.webp" alt="Logo" class="logo" />
           </a>
         </div>
-
 
         <button
           class="menutoggle"
@@ -45,9 +58,7 @@
             <a href="/html/about.html" aria-label="About">About</a>
           </li>
           <li tabindex="0">
-            <a href="/html/works.html" aria-label="Works"
-              >Works</a
-            >
+            <a href="/html/projects.html" aria-label="Projects">Projects</a>
           </li>
           <li tabindex="0">
             <a href="/html/contact.html" aria-label="Contact">Contact</a>
@@ -58,21 +69,24 @@
         </ul>
       </nav>
       <div class="progress-bar"></div>
-
     </header>
-      
+
     <div class="main-content blog">
       <div class="navigation">
         <ul>
-          <li class="nav-item one works">
+          <li class="nav-item one projects">
             <a href="/html/blog/webdev-methods.html">WebDev Methods</a>
-            <p class="subtitle">CMS, Hand Coding, and JS Frameworks: Which One is Right for You?</p> 
+            <p class="subtitle">
+              CMS, Hand Coding, and JS Frameworks: Which One is Right for You?
+            </p>
           </li>
-          <li class="nav-item two works">
+          <li class="nav-item two projects">
             <a href="/html/blog/webdev-process.html">WebDev Process</a>
-            <p class="subtitle">6 Essential Stages to Build a Successful Website</p> 
+            <p class="subtitle">
+              6 Essential Stages to Build a Successful Website
+            </p>
           </li>
-          <!-- <li class="nav-item one works">
+          <!-- <li class="nav-item one projects">
             <a href="/html/blog/webdev-trends.html">WebDev Trends</a>
             <p class="subtitle">Trends in Front Web Developer</p> 
           </li> -->
@@ -87,6 +101,5 @@
     <script src="/assets/js/hamburger.js"></script>
     <script src="/assets/js/current-page.js"></script>
     <script src="/assets/js/progress-bar.js"></script>
-
   </body>
 </html>
