--- a/html/projects.html
+++ b/html/projects.html
@@ -3,31 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Works </title>
+    <meta
+      name="description"
+      content="Explore my works. Discover DiMOS, a Digital Menu Ordering System, and The Butterfly, a modern website for a Childcare business."
+    />
+    <title>Simone Susino | Web Developer | Projects</title>
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-  />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png">
-  <link rel="manifest" href="/assets/images/favicon/site.webmanifest">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/images/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/images/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/assets/images/favicon/site.webmanifest" />
   </head>
   <body>
     <header>
       <nav>
         <div class="logo-container">
           <a href="../index.html" aria-label="Home">
-            <img
-              src="/assets/images/logo.webp"
-              alt="Logo"
-              class="logo"
-            >
+            <img src="/assets/images/logo.webp" alt="Logo" class="logo" />
           </a>
         </div>
-
 
         <button
           class="menutoggle"
@@ -46,9 +59,7 @@
             <a href="/html/about.html" aria-label="About">About</a>
           </li>
           <li tabindex="0">
-            <a href="/html/works.html" aria-label="Works"
-              >Works</a
-            >
+            <a href="/html/projects.html" aria-label="Projects">Projects</a>
           </li>
           <li tabindex="0">
             <a href="/html/contact.html" aria-label="Contact">Contact</a>
@@ -59,19 +70,18 @@
         </ul>
       </nav>
       <div class="progress-bar"></div>
-
     </header>
-      
-    <div class="main-content works">
+
+    <div class="main-content projects">
       <div class="navigation">
         <ul>
-          <li class="nav-item one works">
-            <a href="/html/works/dimos.html">DiMOS</a>
-            <p class="subtitle">A Digital Menu Ordering System</p> 
+          <li class="nav-item one projects">
+            <a href="/html/projects/dimos.html">DiMOS</a>
+            <p class="subtitle">A Digital Menu Ordering System</p>
           </li>
-          <li class="nav-item two works">
-            <a href="/html/works/butterfly.html">The Butterfly</a>
-            <p class="subtitle">A modern website for a Childcare business</p> 
+          <li class="nav-item two projects">
+            <a href="/html/projects/butterfly.html">The Butterfly</a>
+            <p class="subtitle">A modern website for a Childcare business</p>
           </li>
           <!-- <li class="nav-item three">
             Simone
@@ -84,6 +94,5 @@
     <script src="/assets/js/hamburger.js"></script>
     <script src="/assets/js/current-page.js"></script>
     <script src="/assets/js/progress-bar.js"></script>
-
   </body>
 </html>
