--- a/html/thank-you.html
+++ b/html/thank-you.html
@@ -3,27 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Thank You</title>
+    <meta
+      name="description"
+      content="Thank you for submitting the form! Your information has been received successfully."
+    />
+    <title>Simone Susino | Web Developer | Thank You</title>
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-      />
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/assets/images/favicon/site.webmanifest">
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/images/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/images/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/assets/images/favicon/site.webmanifest" />
   </head>
   <body>
     <header>
       <nav>
         <div class="logo-container">
           <a href="../index.html" aria-label="Home">
-            <img
-              src="/assets/images/logo.webp"
-              alt="Logo"
-              class="logo"
-            />
+            <img src="/assets/images/logo.webp" alt="Logo" class="logo" />
           </a>
         </div>
 
@@ -44,7 +58,7 @@
             <a href="/html/about.html" aria-label="About">About</a>
           </li>
           <li tabindex="0">
-            <a href="/html/works.html" aria-label="Works">Works</a>
+            <a href="/html/projects.html" aria-label="Projects">Projects</a>
           </li>
           <li tabindex="0">
             <a href="/html/contact.html" aria-label="Contact">Contact</a>
@@ -55,14 +69,16 @@
         </ul>
       </nav>
       <div class="progress-bar"></div>
-
     </header>
 
     <div class="main-content">
       <section class="one">
         <h1 class="thank">Thank you for your message!</h1>
         <p>I appreciate your interest and will get back to you soon.</p>
-        <p>In the meantime, feel free to explore the rest of my <a href="../index.html">website</a>.</p>
+        <p>
+          In the meantime, feel free to explore the rest of my
+          <a href="../index.html">website</a>.
+        </p>
       </section>
     </div>
 
