--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homepage</title>
+    <meta
+      name="description"
+      content="Welcome to my web development portfolio! I'm a skilled frontend and backend developer based in Dublin. Explore my projects showcasing responsive designs, user-friendly interfaces, and efficient coding."
+    />
+    <title>Simone Susino | Web Developer | Homepage</title>
     <link rel="stylesheet" href="/assets/css/styles.css" />
 
     <link
