--- a/html/contact.html
+++ b/html/contact.html
@@ -40,8 +40,10 @@
           <a href="../index.html" aria-label="Home">
             <img
               src="/assets/images/logo.webp"
-              alt="Logo with no Image"
+              alt="Logo"
               class="logo"
+              width="2048"
+              height="1536"
             />
           </a>
         </div>
@@ -118,6 +120,12 @@
         </div>
         <!-- <p>with a passion for creating beautiful and interactive websites.</p> -->
       </section>
+
+      <div class="bouncing">
+        <button class="scroll-down" aria-label="Scroll Down">
+          Scroll down
+        </button>
+      </div>
 
       <section class="two contact">
         <h2>Thanks for visit my website!</h2>
