--- a/html/projects/butterfly.html
+++ b/html/projects/butterfly.html
@@ -38,7 +38,13 @@
       <nav>
         <div class="logo-container">
           <a href="../../index.html" aria-label="Home">
-            <img src="/assets/images/logo.webp" alt="Logo" class="logo" />
+            <img
+              src="/assets/images/logo.webp"
+              alt="Logo"
+              class="logo"
+              width="2048"
+              height="1536"
+            />
           </a>
         </div>
 
@@ -78,12 +84,20 @@
         <p>A modern website for a Childcare business</p>
       </section>
 
-      <section class="two projects-content image">
+      <div class="bouncing">
+        <button class="scroll-down" aria-label="Scroll Down">
+          Scroll down
+        </button>
+      </div>
+
+      <div class="two projects-content image">
         <img
           src="/assets/images/butterfly/butterfly-overview-devices-logo.webp"
           alt="The Butterfly - Crèche & Childcare"
+          width="6569"
+          height="3636"
         />
-      </section>
+      </div>
 
       <section class="three">
         <h2>Overview</h2>
@@ -103,6 +117,8 @@
           <img
             src="/assets/images/butterfly/macbook-butterfly.webp"
             alt="The Butterfly on MacBook"
+            width="3000"
+            height="2250"
           />
         </div>
 
@@ -161,6 +177,8 @@
           <img
             src="/assets/images/butterfly/iphone-butterfly.webp"
             alt="DiMOS - Model-View-Controller"
+            width="3000"
+            height="2250"
           />
           <!-- <div class="overlay">
             <div class="text">Model View Controller Approach</div>
@@ -211,6 +229,8 @@
           <img
             src="/assets/images/butterfly/ipadpro-butterfly.webp"
             alt="The Butterfly on iPad"
+            width="3000"
+            height="2250"
           />
         </div>
 
@@ -239,6 +259,8 @@
           <img
             src="/assets/images/butterfly/butterfly-overview-devices.webp"
             alt="The Butterfly on Multiple Devices"
+            width="6569"
+            height="3636"
           />
         </div>
 
@@ -248,6 +270,12 @@
             href="https://www.simonesusino.com/butterflychildcare"
             target="_blank"
             >The Butterfly - Crèche &amp; Childcare</a
+          >
+        </p>
+        <p>
+          Source code available on:
+          <a href="https://github.com/simworld/The-Butterfly" target="_blank"
+            >GitHub</a
           >
         </p>
       </section>
