--- a/html/projects/dimos.html
+++ b/html/projects/dimos.html
@@ -38,7 +38,13 @@
       <nav>
         <div class="logo-container">
           <a href="../../index.html" aria-label="Home">
-            <img src="/assets/images/logo.webp" alt="Logo" class="logo" />
+            <img
+              src="/assets/images/logo.webp"
+              alt="Logo"
+              class="logo"
+              width="2048"
+              height="1536"
+            />
           </a>
         </div>
 
@@ -79,12 +85,20 @@
         <!-- <img src="/assets/images/dimos/dimos-iphone.png" alt="DiMOS" /> -->
       </section>
 
-      <section class="two projects-content image">
+      <div class="bouncing">
+        <button class="scroll-down" aria-label="Scroll Down">
+          Scroll down
+        </button>
+      </div>
+
+      <div class="two projects-content image">
         <img
           src="/assets/images/dimos/dimos-overview-devices-logo.webp"
           alt="DiMOS"
+          width="6569"
+          height="3636"
         />
-      </section>
+      </div>
 
       <section class="three">
         <h2>Overview</h2>
@@ -102,6 +116,8 @@
           <img
             src="/assets/images/dimos/ipadmini-dimos.webp"
             alt="DiMOS on iPad Mini "
+            width="3000"
+            height="2250"
           />
         </div>
 
@@ -128,6 +144,8 @@
           <img
             src="/assets/images/dimos/iphone14-dimos.webp"
             alt="DiMOS on iPad Mini "
+            width="3000"
+            height="2250"
           />
         </div>
 
@@ -158,6 +176,8 @@
           <img
             src="/assets/images/dimos/mvc.webp"
             alt="DiMOS - Model-View-Controller"
+            width="1775"
+            height="1574"
           />
           <div class="overlay">
             <div class="text">Model View Controller Approach</div>
@@ -175,6 +195,8 @@
           <img
             src="/assets/images/dimos/system-architecture.webp"
             alt="DiMOS - System Architecture"
+            width="1467"
+            height="997"
           />
           <div class="overlay">
             <div class="text">System Architecture</div>
@@ -208,6 +230,8 @@
           <img
             src="/assets/images/dimos/iphone12-dimos.webp"
             alt="DiMOS on iPhone 12"
+            width="3000"
+            height="2250"
           />
         </div>
 
@@ -237,6 +261,8 @@
           <img
             src="/assets/images/dimos/dimos-overview-devices.webp"
             alt="DiMOS Devices"
+            width="6569"
+            height="3636"
           />
         </div>
 
@@ -244,6 +270,14 @@
           Demo available at:
           <a href="http://dimos.azurewebsites.net" target="_blank"
             >DiMOS on Azure</a
+          >
+        </p>
+        <p>
+          Source code available on:
+          <a
+            href="https://github.com/simworld/DiMOS-DigitalMenuOrderingSystem-"
+            target="_blank"
+            >GitHub</a
           >
         </p>
       </section>
