--- a/html/thank-you.html
+++ b/html/thank-you.html
@@ -37,7 +37,13 @@
       <nav>
         <div class="logo-container">
           <a href="../index.html" aria-label="Home">
-            <img src="/assets/images/logo.webp" alt="Logo" class="logo" />
+            <img
+              src="/assets/images/logo.webp"
+              alt="Logo"
+              class="logo"
+              width="2048"
+              height="1536"
+            />
           </a>
         </div>
 
@@ -83,6 +89,6 @@
     </div>
 
     <script src="/assets/js/hamburger.js"></script>
-    <script src="/assets/js/fade.js"></script>
+    <!-- <script src="/assets/js/fade.js"></script> -->
   </body>
 </html>
