--- a/html/projects.html
+++ b/html/projects.html
@@ -38,7 +38,13 @@
       <nav>
         <div class="logo-container">
           <a href="../index.html" aria-label="Home">
-            <img src="/assets/images/logo.webp" alt="Logo" class="logo" />
+            <img
+              src="/assets/images/logo.webp"
+              alt="Logo"
+              class="logo"
+              width="2048"
+              height="1536"
+            />
           </a>
         </div>
 
