--- a/index.html
+++ b/index.html
@@ -34,20 +34,21 @@
       <div class="navigation">
         <ul>
           <li
+            tabindex="0"
             class="nav-item one home"
             onmouseover="changeColor(this)"
             onmouseout="restoreColor(this)"
           >
             Hello<span class="comma">,</span>
           </li>
-          <li class="nav-item two home">I am</li>
-          <li class="nav-item three home">Simone</li>
-          <li class="nav-item four home"></li>
+          <li tabindex="0" class="nav-item two home">I am</li>
+          <li tabindex="0" class="nav-item three home">Simone</li>
+          <li tabindex="0" class="nav-item four home"></li>
         </ul>
       </div>
     </div>
 
-    <div class="show-menu">
+    <div class="bouncing">
       <button class="tap-here">Tap Anywhere</button>
     </div>
 
