--- a/html/thank-you.html
+++ b/html/thank-you.html
@@ -54,9 +54,11 @@
           aria-label="Toggle Menu"
         >
           <i class="fa-solid fa-bars"></i>
-          <i class="fa-solid fa-x"></i>
+          <!-- <i class="fa-solid fa-x"></i> -->
         </button>
         <ul class="hamburger-navigation">
+          <!-- <div id="hamburger"></div> -->
+          <!-- <li><i class="fa-solid fa-x"></i></li> -->
           <li tabindex="0">
             <a href="../index.html" aria-label="Home">Home</a>
           </li>
@@ -71,6 +73,9 @@
           </li>
           <li tabindex="0">
             <a href="/html/blog.html" aria-label="Blog">Blog</a>
+          </li>
+          <li class="copyright">
+            &copy; 2023 Simone Susino. All right reserved.
           </li>
         </ul>
       </nav>
