Minor changes and fix

--- a/html/blog.html
+++ b/html/blog.html
@@ -111,6 +111,6 @@
     <!-- <script src="/assets/js/fade.js"></script> -->
     <script src="/assets/js/hamburger.js"></script>
     <script src="/assets/js/current-page.js"></script>
-    <script src="/assets/js/progress-bar.js"></script>
+    <!-- <script src="/assets/js/progress-bar.js"></script> -->
   </body>
 </html>
