--- a/404.html
+++ b/404.html
@@ -54,11 +54,8 @@
           aria-label="Toggle Menu"
         >
           <i class="fa-solid fa-bars"></i>
-          <!-- <i class="fa-solid fa-x"></i> -->
         </button>
         <ul class="hamburger-navigation">
-          <!-- <div id="hamburger"></div> -->
-          <!-- <li><i class="fa-solid fa-x"></i></li> -->
           <li tabindex="0">
             <a href="../index.html" aria-label="Home">Home</a>
           </li>
@@ -89,9 +86,7 @@
           The page you're looking for seems to have vanished into the digital
           abyss.
         </p>
-        <p>
-          How about heading back to my <a href="../index.html">homepage</a>?
-        </p>
+        <p>How about heading back to my <a href="/index.html">homepage</a>?</p>
       </section>
     </div>
 
