Menu links updated

--- a/html/projects.html
+++ b/html/projects.html
@@ -70,7 +70,7 @@
             <a href="/html/contact.html" aria-label="Contact">Contact</a>
           </li>
           <li tabindex="0">
-            <a href="/html/blog.html" aria-label="Blog">Blog</a>
+            <a href="/blog" aria-label="Blog">Blog</a>
           </li>
           <li class="copyright">
             &copy; 2023 Simone Susino. All right reserved.
