Fixing overscrolling on three pages

--- a/html/contact.html
+++ b/html/contact.html
@@ -33,7 +33,7 @@
     />
     <link rel="manifest" href="/assets/images/favicon/site.webmanifest" />
   </head>
-  <body>
+  <body class="no-overflow">
     <header>
       <nav>
         <div class="logo-container">
