--- a/html/contact.html
+++ b/html/contact.html
@@ -143,6 +143,7 @@
                 id="name"
                 name="firstname"
                 placeholder="Your name.."
+                required
               />
 
               <label for="email"
@@ -163,6 +164,7 @@
                 id="phone"
                 name="phone"
                 placeholder="Your Phone.."
+                required
               />
 
               <label for="message"
@@ -173,6 +175,7 @@
                 name="message"
                 placeholder="Please write your message.."
                 style="height: 200px"
+                required
               ></textarea>
 
               <button
