--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="Welcome to my web development portfolio! I'm a skilled frontend and backend developer based in Dublin. Explore my projects showcasing responsive designs, user-friendly interfaces, and efficient coding."
     />
     <title>Simone Susino | Web Developer | Homepage</title>
-    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
 
     <link
       rel="apple-touch-icon"
