--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/assets/images/favicon/apple-touch-icon.png"
+      href="assets/images/favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/assets/images/favicon/favicon-32x32.png"
+      href="assets/images/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/assets/images/favicon/favicon-16x16.png"
+      href="assets/images/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="/assets/images/favicon/site.webmanifest" />
+    <link rel="manifest" href="assets/images/favicon/site.webmanifest" />
   </head>
   <body id="home">
     <div class="main-content">
@@ -52,8 +52,8 @@
       <button class="tap-here">Tap Anywhere</button>
     </div>
 
-    <script src="/assets/js/navigation.js"></script>
-    <script src="/assets/js/random.js"></script>
-    <script src="/assets/js/change-color.js"></script>
+    <script src="assets/js/navigation.js"></script>
+    <script src="assets/js/random.js"></script>
+    <script src="assets/js/change-color.js"></script>
   </body>
 </html>
